--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
-    <string name="app_name">ListApplication</string>
+    <string name="app_name">Jokes</string>
     <string name="search_hint">Search ...</string>
     <string name="search">Search</string>
+    <string name="BannerAdId">ca-app-pub-6893847109100831/5728172701</string>
+    <string name="InterstitialAdId">ca-app-pub-6893847109100831/8681639104</string>
+    <string name="TestDeviceId">9485F03D6638315B8D61ACB4A8187EFB</string>
 </resources>
