--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Jokes</string>
+    <string name="app_name">Make Money Online</string>
     <string name="search_hint">Search ...</string>
     <string name="search">Search</string>
     <string name="BannerAdId">ca-app-pub-6893847109100831/5728172701</string>
